Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14939

QLocalSocket::abort() does not abort

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.6.2, 4.6.3, 4.7.0
    • Network: Sockets
    • None
    • Windows XP 32, Qt SDK 2010.01.01 and Qt SDK 2010.05
    • 258c1a8537816f7b4c79e7cf4090a333768a10fa

      QLocalSocket::abort() function does not abort an existing connection. It just calles close(), and if there are still bytes to write it does not close the pipe but waits for them to be written.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            xcm Martin Petersson (Inactive)
            martin.bachlinger Martin Bachlinger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes