QLocalSocket: fix abort on Windows.

The socket will not close as long as there are bytes left to write.
So by deleting the pipeWriter bytesToTrite will be 0 and the socket
will close directly.

Task-number: QTBUG-14939
Reviewed-by: Joerg Bornemann